favicon, OGP設定。フォント調整

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,21 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<title>HuntersAt</title>
+
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
+
+		<!-- OGP -->
+		<meta property="og:title" content="HuntersAt">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://huntersat.suibari.com/">
+		<meta property="og:image" content="https://huntersat.suibari.com/ogp.png">
+		<meta property="og:site_name" content="HuntersAt">
+		<meta property="og:description" content="HuntersAtはモンスターハンターのプロフィールカード(ギルドカード)を生成、共有するアプリです。| Profile Card Generation Web App for Monster Hunter Series.">
+		<meta property="og:locale" content="ja_JP">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
